--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="account_type_consultant">Consultor</string>
     <string name="account_type_productor">Produtor</string>
     <string name="senhaConsultor">244466666</string>
+    <string name="login_intro">Já possui uma\nconta?</string>
+    <string name="email_intro_value">Email</string>
+    <string name="senha_intro_value">Senha</string>
+    <string name="login_intro_value">Login</string>
+    <string name="forgot_password">Esqueceu a senha?</string>
+    <string name="register_intro">Novo usuário? Registre-se agora!</string>
 </resources>
