--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="login_intro_value">Login</string>
     <string name="forgot_password">Esqueceu a senha?</string>
     <string name="register_intro">Novo usuário? Registre-se agora!</string>
+    <string name="cadastro_intro_value">Cadastrar</string>
+    <string name="senha_consultor_intro">Senha de consultor</string>
+    <string name="cadastre_info_intro">Cadastre-se\nGratuitamente</string>
 </resources>
