Os erros foram corrigidos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,5 @@
     <string name="register_intro">Novo usuário? Registre-se agora!</string>
     <string name="cadastro_intro_value">Cadastrar</string>
     <string name="senha_consultor_intro">Senha de consultor</string>
-    <string name="cadastre_info_intro">Cadastre-se\nGratuitamente</string>
+    <string name="cadastre_info_intro">Cadastre-se\nAgora</string>
 </resources>
