Prototipo tela fazenda

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="renda_bruta">Renda Bruta</string>
     <string name="saldo_fazenda">Saldo</string>
     <string name="a_pagar">A pagar</string>
-    <string name="a_receber">a receber</string>
+    <string name="a_receber">A receber</string>
     <string name="patrimonio_liquido">Patrimonio Líquido</string>
     <string name="solvencia_intro">Solvência</string>
     <string name="liquidez_intro">liquidez</string>
@@ -36,4 +36,32 @@
     <string name="atividade_intro">Atividade</string>
     <string name="detalhes_intro">Detalhes</string>
     <string name="inventario_intro">Inventário</string>
+    <string name="data_intro">Data</string>
+    <string name="descricao_intro">Descrição</string>
+    <string name="conta_intro">Conta</string>
+    <string name="quantidade_inicial_intro">Quantidade inicial</string>
+    <string name="valor_unitário">Valor unitário</string>
+    <string name="data_vencimento_intro">Data vencimento</string>
+    <string name="valor_amortizado_intro">Valor amortizado</string>
+    <string name="cadastro_inventario_intro">Cadastro item</string>
+    <string name="nome_intro">Nome</string>
+    <string name="ano_compra_intro">Ano de compra</string>
+    <string name="reforma_intro">Reforma</string>
+    <string name="quantidade_atual_intro">Quantidade atual</string>
+    <string name="resultados_fazenda">Resultados fazenda</string>
+    <string name="indicadores_economicos">Indicadores econômicos</string>
+    <string name="resultado_por_atividade">Resultado por atividade</string>
+    <string name="receita_bruta_intro">Receita bruta</string>
+    <string name="custo_operacional_efetivo">Custo operacional efetivo</string>
+    <string name="custo_operacional_total">Custo operacional total</string>
+    <string name="custo_total_intro">Custo total</string>
+    <string name="despesas_intro">Despesas</string>
+    <string name="fluxo_caixa_atividade">Fluxo caixa atividade</string>
+    <string name="receitas_intro">Receitas</string>
+    <string name="pendencias_intro">Pendências</string>
+    <string name="rentabildiade_intro">Rentabilidade</string>
+    <string name="ativo_intro">Ativo</string>
+    <string name="passivo_intro">Passivo</string>
+    <string name="criar_programa_intro">Criar Programa</string>
+    <string name="distribuicao_patrimonio">Distribuição de patrimônio</string>
 </resources>
