criando a dialog pra criação de turmas/fazendas/programas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
     <string name="rentabildiade_intro">Rentabilidade</string>
     <string name="ativo_intro">Ativo</string>
     <string name="passivo_intro">Passivo</string>
-    <string name="criar_programa_intro">Criar Programa</string>
+    <string name="programa_intro">Programa</string>
     <string name="distribuicao_patrimonio">Distribuição de patrimônio</string>
     <string name="agroplus_logo_description">Logo marca da Agroplus</string>
     <string name="entrada_intro">Entrada</string>
