--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,7 +75,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="fazenda_intro">Fazenda</string>
-    <string name="metas_intro">Metas</string>
+    <string name="metas_intro">Métricas</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
