Mexendo no fluxo de caixa agora.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,8 +103,12 @@
         <item>Animais</item>
         <item>Insumos</item>
         <item>Produtos</item>
+    </string-array>
 
 
+    <string-array name="bensDepreciaveis">
+        <item>Benfeitoria</item>
+        <item>Máquinas</item>
     </string-array>
 
 </resources>
