--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,8 +83,6 @@
 
     <string name="home_second">Home Second</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="terra_intro">Terra</string>
     <string name="benfeitoria_intro">Benfeitoria</string>
@@ -113,6 +111,7 @@
         <item>Animais</item>
         <item>Insumos</item>
         <item>Produtos</item>
+        <item>Dívidas de longo prazo</item>
     </string-array>
 
 
