Listagem de movimentações de fluxo de caixa

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,6 +104,7 @@
     <string name="atividades_info_hint">Nome da atividade econômica</string>
     <string name="rateio_info_hint">Porcentagem custos gerais: 30,5; 47; 51.3</string>
     <string name="consumo_atividade">Consumido na atividade</string>
+    <string name="movimentacoes_string">Movimentações</string>
 
     <string-array name="tiposItem">
         <item>Terra</item>
