-> Adicionar uma meta observação que aparece um popup mostrando comentários sobre os resultados. Feito -> Adicionar botão do ano anterior. Feito -> Adicionar gráfico de linha fluxo de caixa. FEITO -> Mudar compra para principal. FEITO -> Ano agrícola primeiro julho. FEITO
-> Mexer na qualidade dos gráficos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,6 +111,7 @@
     <string name="pagar_intro">pagar</string>
     <string name="cancelar_intro">Cancelar</string>
     <string name="confirmar_intro">Confirmar</string>
+    <string name="comentarios_intro">Comentários</string>
 
     <string-array name="tiposItem">
         <item>Terra</item>
