--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,5 +148,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="adicionar_fazenda">Adicionar fazenda.</string>
     <string name="participar_fazenda_intro">Participar de uma fazenda</string>
+    <string name="selecionar_fazenda_intro">Escolha sua fazenda</string>
 
 </resources>
