Buscando fazendas online e salvando no celular.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,5 +150,6 @@
     <string name="participar_fazenda_intro">Participar de uma fazenda</string>
     <string name="selecionar_fazenda_intro">Escolha sua fazenda</string>
     <string name="trocar_fazenda_menu">Trocar fazenda</string>
+    <string name="senha_fazenda_hint">Insira senha da fazenda</string>
 
 </resources>
