Adicionado capital não remunerado.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -151,5 +151,6 @@
     <string name="selecionar_fazenda_intro">Escolha sua fazenda</string>
     <string name="trocar_fazenda_menu">Trocar fazenda</string>
     <string name="senha_fazenda_hint">Insira senha da fazenda</string>
+    <string name="trabalho_familiar_remunerado">Trabalho familiar não remunerado.</string>
 
 </resources>
